# substrate-modules

./: env.bashrc
sky130_inverter/: Cargo.toml
sky130_inverter/src/: lib.rs  tb.rs
transistor_array/: Cargo.toml
transistor_array/src/: .lib.rs.swp  lib.rs  tb.rs
